styles/sass/_index.scss
@use "variables.scss" as *;

.wrapper {
  background-color: #111;
  width: 100%;
  color: $white;
}
header {
  height: 5rem;
  width: 100%;
  background-color: $black;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid $primary-blue;
  padding: 0 1rem;
}

.movielist {
  display: grid;
  margin: 0 auto;
  .index-poster-img {
    padding: 2rem;
    display: flex;
    justify-content: center;
  }
  img {
    border-radius: 20px;
  }
  & > div {
    width: 100%;
    grid-column: 1 / -1;
    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
      rgba(17, 17, 26, 0.1) 0px 0px 8px;
  }
  & > div:not(.banner-movie):not(.MuiTabs-root) {
    position: relative;
    padding: 0 1rem;
    a {
      text-decoration: none;
    }
    h2 {
      min-height: 5rem;
      color: white;
      text-align: center;
      margin-bottom: 1rem;
    }
    p {
      color: #666;
      padding: 0 0.5rem;
    }
    p.low {
      text-align: center;
      padding: 1rem 0;
      color: red;
    }
    p.high {
      text-align: center;
      padding: 1rem 0;
      color: green;
    }
  }
}
.banner-movie {
  grid-column: 2 /4;
  display: grid;
  place-items: center;
  margin-top: 1rem;
}
.like-btn {
  position: absolute;
  top: 0.5rem;
  right: 1rem;
  scale: 1.5;
  z-index: 30;
  padding: 0.75rem;
}
.like-btn:hover {
  color: $primary-blue;
}
@media (min-width: $small) {
  .banner-movie {
    display: grid;
    place-items: center;
    padding: 1rem;
    position: relative;
  }
  .movielist {
    & > div {
      grid-column: auto;
    }
    .banner-movie {
      grid-column: 2 / 4;
    }
  }
}
.MuiTabs-root {
  margin-top: 1rem;
  grid-column: span 4 !important;
  width: 100% !important;
  button {
    color: #666 !important;
  }
  button.Mui-selected {
    color: $primary-blue !important;
  }
  .css-1aquho2-MuiTabs-indicator {
    background-color: $primary-blue !important;
  }
}
.search-results {
  position: absolute;
  width: 100%;
  top: 5rem;
  background-color: #222;
  z-index: 20;
  right: 0;
  text-align: center;
  display: flex;
  justify-content: center;
  ul {
    list-style-type: none;
    width: 100%;
    li {
      width: 100%;
      padding: 1rem 0;
      &:hover {
        background-color: lightgray;
      }
    }
    a {
      padding: 1rem 5rem;
      color: white;
      text-decoration: none;
      cursor: pointer;
    }
  }
}

footer {
  text-align: center;
  font-size: 0.8rem;
  padding-top: 10rem;
  padding-bottom: 2rem;
}

@media (min-width: $small) {
  header {
    border-bottom: none;
    img {
      width: 8rem;
      text-align: center;
      padding-right: 1rem;
    }
  }
}

@media (min-width: $large) {
  .movielist {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    margin: 0 auto;
  }

  .index-poster-img:hover {
    opacity: 25%;
  }
  .index-poster-img {
    padding: 2rem;
  }
  img {
    border-radius: 20px;
  }
  .hidden {
    display: none;
  }
}

// Spinner "Tom Fan - codepen.io"

.spinner-container {
  display: grid;
  place-items: center;
  gap: 10px;
  padding: 10px;
}

.spinner-container > div {
  width: 100%;
  aspect-ratio: 1/1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.spinner {
  width: 100px;
  height: 100px;
  background: linear-gradient(90deg, $primary-blue, #555);
}

@keyframes rotate {
  to {
    transform: rotate(360deg);
  }
}
#spinner3 {
  border-radius: 50%;
  position: relative;
  animation: rotate 2s linear infinite;
}

#spinner3::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  height: 90%;
  border-radius: 50%;
  animation: shadow 2s linear infinite;
}

@keyframes shadow {
  0% {
    box-shadow: inset 0 0 15px 15px black, 0 0 25px 25px black;
  }

  50% {
    box-shadow: inset 0 0 25px 25px black;
  }

  100% {
    box-shadow: inset 0 0 15px 15px black, 0 0 25px 25px black;
  }
}

